Update index.html for redirection to help desk

--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Live Chat</title>
-  <meta name="robots" content="noindex,nofollow">
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=/help-desk/">
   <script>
-    (function() {
-      var isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-      if (isMobile) {
-        window.location = "discord:///#@discord.gg/vpUktKkZf7";
-        setTimeout(function() {
-          window.location = "https://discord.gg/vpUktKkZf7";
-        }, 1200);
-      } else {
-        window.location.replace("https://discord.gg/vpUktKkZf7");
-      }
-    })();
+    window.location.replace("/help-desk/");
   </script>
 </head>
-<body>Redirecting…</body>
+<body>
+</body>
 </html>
